<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.details.SequenceDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="20dp">
        <EditText
            android:id="@+id/sequence_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/title_hint"
            android:paddingHorizontal="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="10dp"
            android:id="@+id/work_activity_list"
            android:layout_width="match_parent"
            android:layout_height="220dp">

        </androidx.recyclerview.widget.RecyclerView>
        <Button
            android:id="@+id/addWorkActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addWorkActivity"/>
        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"/>
        <Button
            android:id="@+id/start_timer_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startWorking"
            android:onClick="startTimerActivity"/>
        
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>