<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.timer.TimerActivity"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:id="@+id/timer_sequence_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_of_next_work_activities"
        android:layout_width="match_parent"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/current_work_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/timer_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="25sp"/>
    <Button
        android:id="@+id/start_pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="startButton"
        android:text="@string/start"/>
    <Button
        android:id="@+id/next_id_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="nextButton"
        android:text="@string/next"/>
</LinearLayout>